DropdownContentBar had a this border showing at bottom when collapsed. Fixed, and changed the color to something that matches the design (and set the background of the content area to that color as well)

--- a/front_end/src/components/DropdownContentBar/DropdownContentBar.scss
+++ b/front_end/src/components/DropdownContentBar/DropdownContentBar.scss
@@ -1,4 +1,6 @@
-$background: black;
+@import '../../stdStyles/stdColors.scss';
+
+$background: darken($stdSecondaryBackColor, 50);
 
 .DropdownContentBar {
 	
@@ -22,8 +24,9 @@ $background: black;
 	
 	.dropdownContent {
 		
-		$borderBottomRadius: 1vw;
+		background-color: $background;
 		
+		$borderBottomRadius: 1vw;
 		border: 1px solid $background;
 		border-bottom-left-radius: $borderBottomRadius;
 		border-bottom-right-radius: $borderBottomRadius;
